# purroxy2

./: .gitignore  BROWSER_ENGINE_PIVOT.md  Cargo.toml  DESIGN_BRIEF.md  DEVELOPMENT.md  IMPLEMENTATION_PLAN.md  PRD.md  README.md  electron-builder.yml  glama.json  index.html  mcp-server.mjs  package-lock.json  package.json  server.json  start.sh  stop.sh  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build.yml  copy-secrets.yml
backend/: schema.sql  wrangler.toml
backend/src/: index.ts
core/browser/: playwright-engine.ts
crates/desktop/: Cargo.toml  tauri.conf.json
crates/desktop/src/: main.rs  recorder_proc.rs  settings.rs
crates/host/src/: main.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs  main.rs  protocol.rs  server.rs
crates/mcp/tests/: protocol.rs
crates/migration/: Cargo.toml
crates/migration/src/: convert.rs  lib.rs  v1.rs  wizard.rs
crates/recorder/: Cargo.toml
crates/recorder/src/: lib.rs  main.rs  recording.rs  shim.js  snapshot.rs  types.rs
crates/recorder/tests/: canonical.rs
crates/registry/: Cargo.toml
crates/registry/src/: bundle.rs  client.rs  install.rs  lib.rs
crates/replay/src/: engine.rs  lib.rs  main.rs  run_record.rs
crates/replay/tests/: live_replay.rs
crates/replay/tests/fixtures/one-step/: manifest.json
docs/: guide.html  index.html  privacy.html  terms.html
electron/: account.ts  ai.ts  app-lock.ts  browser-view.ts  capabilities.ts  crypto.ts  ipc.ts  main.ts  mcp-api.ts  preload.ts  recorder.ts  sites.ts  store.ts  tray.ts  updater.ts
purroxy-design-files/: Purroxy desktop.html  app.css  app.jsx  chrome.jsx  detail.jsx  icons.jsx  library.jsx  wizard.jsx
resources/: icon.icns
scripts/: publish-npm.sh
src/: App.tsx  global.d.ts  index.css
src/components/: LockScreen.tsx  Sidebar.tsx
src/stores/: settings.ts
src/views/: Builder.tsx  Community.tsx  Home.tsx  Library.tsx  Settings.tsx  Vault.tsx
tests/core/: playwright-engine.test.ts
tests/electron/: mcp-api.test.ts
tests/frontend/views/: Community.test.tsx  Library.test.tsx  Settings.test.tsx  Vault.test.tsx
tests/setup/: dom-setup.ts  electron-mocks.ts
