[workspace]
members = [
    "crates/desktop",
    "crates/host",
    "crates/recorder",
    "crates/reference-capability",
    "crates/replay",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
publish = false

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasmtime = { version = "26", features = ["component-model", "runtime", "cranelift"] }
wasmtime-wasi = "26"
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "signal", "time", "io-std"] }
futures = "0.3"
