[package]
name = "desktop"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

# Phase 4 deliverable: Tauri shell that lists installed recordings,
# runs a replay against the chosen one + reference component, and
# shows the run record. Minimal frontend (vanilla HTML/JS) to keep
# the build pipeline scope-bounded; v1's React renderer is the
# eventual production UI per IMPLEMENTATION_PLAN.md.

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow.workspace = true
tokio = { workspace = true, features = ["process", "io-util"] }
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = [] }
recorder = { path = "../recorder" }
replay = { path = "../replay" }
registry = { path = "../registry" }
security = { path = "../security" }
libc = "0.2"
rfd = { version = "0.14", default-features = false, features = ["xdg-portal", "tokio"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
