[package]
name = "registry"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

# Phase 7: capability bundle pack/unpack/verify, plus a Registry
# client trait the host calls to install or fetch updates. PRD §3
# bundle format, §6.6 community library, §7.5 community library
# functional reqs, §10 signing key lifecycle.
#
# Bundles are zip archives:
#   manifest.json     - RecordingManifest (recorder::types)
#   logic.wasm        - capability component
#   snapshots/*.json  - canonical PageSnapshots
#   signature.bin     - Ed25519 signature over canonical payload
#   public_key.bin    - 32-byte Ed25519 verifying key
#
# Canonical payload = sorted file path concatenations:
# u32_be(path_len) || path_bytes || u64_be(content_len) || content
# for each non-signature file in lexicographic path order.

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
zip = { version = "2", default-features = false, features = ["deflate"] }
recorder = { path = "../recorder" }
security = { path = "../security" }
